--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,12 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+
+collections:
+  projects:
+    output: true
+    permalink: /projects/:title/
+
 
 # Build settings
 markdown: kramdown
