--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: AHS Capstone
+title: AHS CAP AT A DISTANCE
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  AHS Capstone provides Olin students the opportunity to dive deep in their AHS concentration and create an original, independent project with guidance and input from content-expert mentors. Each year, the AHS Capstone class has a tradition of sharing our work with the Olin community in a live, interactive exhibit—inspiring current conversations and future AHS work and play. During this time of social distancing, we believe AHS can uplift, inspire, and connect us more than ever—so we offer to you “AHS Cap at a Distance”.
 baseurl: "/ahs-capstone-exhibit" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
