Fixing intro text.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,70 +1,19 @@
 - type: page
-  title: Testing, Testing!
+  title: asdf!
   author: Test Testerson
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis eros nec turpis gravida tempus sed vel turpis. Fusce venenatis vulputate fermentum. Nullam blandit quam mattis tristique sagittis. Praesent dapibus metus at ipsum commodo ullamcorper. Sed in nibh sollicitudin, varius turpis id, tristique eros. Vivamus facilisis velit vel lacus iaculis, malesuada lacinia nibh vulputate. Quisque malesuada ipsum non metus pellentesque congue. Cras a lacus ut velit commodo euismod in eget lacus. Donec scelerisque finibus arcu, ut ullamcorper ante. 
-  hyperlink: test
-  img: assets/test-06.png
-
-- type: page
-  title: Testing2!
-  author: Test Testerson22
-  description: This is a test project.2
-  hyperlink: test2
-  img: assets/test-06.png
-
-- type: page
-  layout: page
-  author: Matt Brucker
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis eros nec turpis gravida tempus sed vel turpis. Fusce venenatis vulputate fermentum. Nullam blandit quam mattis tristique sagittis. Praesent dapibus metus at ipsum commodo ullamcorper. Sed in nibh sollicitudin, varius turpis id, tristique eros. Vivamus facilisis velit vel lacus iaculis, malesuada lacinia nibh vulputate. Quisque malesuada ipsum non metus pellentesque congue. Cras a lacus ut velit commodo euismod in eget lacus. Donec scelerisque finibus arcu, ut ullamcorper ante.
-  title: Unpacking Criticality
-  hyperlink: criticality
-  img: assets/test-06.png
-
-
-- type: link
-  title: Testing2!
-  author: Test Testerson22
   description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis eros nec turpis gravida tempus sed vel turpis. Fusce venenatis vulputate fermentum. Nullam blandit quam mattis tristique sagittis. Praesent dapibus metus at ipsum commodo ullamcorper. Sed in nibh sollicitudin, varius turpis id, tristique eros. Vivamus facilisis velit vel lacus iaculis, malesuada lacinia nibh vulputate. Quisque malesuada ipsum non metus pellentesque congue. Cras a lacus ut velit commodo euismod in eget lacus. Donec scelerisque finibus arcu, ut ullamcorper ante. 
   hyperlink: https://evan.new-schmidt.com
   img: assets/test-06.png
 
 - type: page
-  title: Testing, Testing!
-  author: Test Testerson
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis eros nec turpis gravida tempus sed vel turpis. Fusce venenatis vulputate fermentum. Nullam blandit quam mattis tristique sagittis. Praesent dapibus metus at ipsum commodo ullamcorper. Sed in nibh sollicitudin, varius turpis id, tristique eros. Vivamus facilisis velit vel lacus iaculis, malesuada lacinia nibh vulputate. Quisque malesuada ipsum non metus pellentesque congue. Cras a lacus ut velit commodo euismod in eget lacus. Donec scelerisque finibus arcu, ut ullamcorper ante. 
-  hyperlink: test
-  img: assets/test-06.png
-
-- type: page
-  title: Testing2!
+  title: asdfeeee!
   author: Test Testerson22
   description: This is a test project.2
-  hyperlink: test2
-  img: assets/test-06.png
-
-- type: link
-  title: Testing2!
-  author: Test Testerson22
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis eros nec turpis gravida tempus sed vel turpis. Fusce venenatis vulputate fermentum. Nullam blandit quam mattis tristique sagittis. Praesent dapibus metus at ipsum commodo ullamcorper. Sed in nibh sollicitudin, varius turpis id, tristique eros. Vivamus facilisis velit vel lacus iaculis, malesuada lacinia nibh vulputate. Quisque malesuada ipsum non metus pellentesque congue. Cras a lacus ut velit commodo euismod in eget lacus. Donec scelerisque finibus arcu, ut ullamcorper ante. 
   hyperlink: https://evan.new-schmidt.com
   img: assets/test-06.png
 
-- type: page
-  title: Testing, Testing!
-  author: Test Testerson
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis eros nec turpis gravida tempus sed vel turpis. Fusce venenatis vulputate fermentum. Nullam blandit quam mattis tristique sagittis. Praesent dapibus metus at ipsum commodo ullamcorper. Sed in nibh sollicitudin, varius turpis id, tristique eros. Vivamus facilisis velit vel lacus iaculis, malesuada lacinia nibh vulputate. Quisque malesuada ipsum non metus pellentesque congue. Cras a lacus ut velit commodo euismod in eget lacus. Donec scelerisque finibus arcu, ut ullamcorper ante. 
-  hyperlink: test
-  img: assets/test-06.png
-
-- type: page
-  title: Testing2!
-  author: Test Testerson22
-  description: This is a test project.2
-  hyperlink: test2
-  img: assets/test-06.png
-
 - type: link
-  title: Testing2!
+  title: asdfffffff!
   author: Test Testerson22
   description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis eros nec turpis gravida tempus sed vel turpis. Fusce venenatis vulputate fermentum. Nullam blandit quam mattis tristique sagittis. Praesent dapibus metus at ipsum commodo ullamcorper. Sed in nibh sollicitudin, varius turpis id, tristique eros. Vivamus facilisis velit vel lacus iaculis, malesuada lacinia nibh vulputate. Quisque malesuada ipsum non metus pellentesque congue. Cras a lacus ut velit commodo euismod in eget lacus. Donec scelerisque finibus arcu, ut ullamcorper ante. 
   hyperlink: https://evan.new-schmidt.com
