Adding new content.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -22,5 +22,34 @@
   hyperlink: https://abunten.github.io/
   img: assets/one.png  
 
+- author: Miranda Lao
+  title: red string
+  description: An examination of my relationship to math.
+  hyperlink: https://mirandalao.com/2020/04/27/red-string.html
+  img: assets/red.jpg
+
+- author: Athmika Senthilkumar
+  title: Neoliberal Influences on the Founding of Olin College
+  description: In this paper, I unpack the gravity of the founding trustees’ order that the college embody—as a condition for receiving endowments and grants—values rooted in free enterprise and capitalism. In doing so, I attempt to ponder critical questions about why Olin College was conceived and why certain features atypical on paper at the time in higher education, like the refusal to offer any path to faculty tenureship, were built into its founding. If one fails to examine the values of Olin’s founding, one risks perpetuating institutional practices and pedagogical beliefs that uncritically reproduce those values. By highlighting the values that the institution inherited through its founding, I hope to inspire explorations of what Olin College might look like under different value systems.
+  hyperlink: https://docs.google.com/document/d/1Ofwp-ZXkIzeTZ3P_DIZvaf4xqgAzvNtKf90en_jS7p0/edit?usp=sharing
+  img: assets/test-06.png
+
+- author: Tobias Shapinsky
+  title: In a Different Light
+  description: Ever wondered what the world would look like if you could see infrared? Well, in In a Different Light I modified a digital camera to find out. This set of images from Massachusetts, DC and New York show the world as you have never seen it before.
+  hyperlink: https://photos.app.goo.gl/FbMv5etwwa7EmmbC8
+  img: assets/infra.jpg
+
+- author: Annie Kroo
+  title: Value Alignment in Change Initiatives
+  description: In this project I have explored how value alignment interacts with change initiatives in an Olin context. This exploration draws on educational, cultural, and organizational change theory to understand areas of opportunity for the Olin community to improve our efficacy of innovation. This project is a quantitative and qualitative analysis based upon the Argosy Study conducted by Jon Stolk and Tess Edmonds comprised of 34 Olin faculty members responses.
+  hyperlink: https://sites.google.com/view/valuealignmentinchange/home
+  img: assets/value.png
+
+- author: Gretchen Rice
+  title: A Glimpse
+  description: This collection looks into the stories of five Olin women seniors. The interviews were centered around the women's journeys through their education with a significant focus on gender. In this collection, I try to represent the women through photography and reflections about their interviews. I invite you to explore this collection and use their stories and an inspiration to reflect on your own experiences. 
+  hyperlink: https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A0c756d4b-2a87-46dc-aec5-365e9e7c282c
+  img: assets/glimpse.jpg
 
 
