--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -52,4 +52,9 @@
   hyperlink: https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A0c756d4b-2a87-46dc-aec5-365e9e7c282c
   img: assets/glimpse.jpg
 
+- author: Henry Rachootin
+  title: Mana Potion
+  description: In the fiction of a story, magic is a real part of the world. Characters are able to study and perfect the use of magic through skill and dedication. In reality, we reserve the concept of magic for things that don't exist. We deride the magical as old fashioned and superstitious. This ontological decision forces us into a non-magical reality. We have systematically eliminated any trace of wonder at the power that does exist around us, creating a world were the natural processes that power our world are corrupted by the inclusion of science or math, no longer magical now that we can put numbers to them. These photos point out some of the ways that magic really does manifest, in the power of money, the power of certain liquids, and the power of levitation. The blue potion imbues its holder with the power of the dollar inside. The red potion can temporarily ease sickness by reducing fever and swelling. The deep green potion does the same, and also puts the drinker to sleep. The levitation is performed with a thin film of superconducting crystal, the mechanics of which are not well understood by physics.
+  hyperlink: https://photos.app.goo.gl/8AoVHxmDy4dzrhVG9
+  img: assets/potion.jpg
 
