Adding background and new projects.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -26,41 +26,55 @@
   title: The Oneness
   description: The Oneness is an installation sound experience that speaks to the transience and change that our world is currently experiencing. The instillation comprises a sound composition that is experienced in a special environment. The sound composition is an eight minute long combination of varying layers of sine frequencies, changing in intensity and tone throughout the piece, with other underlying sounds that affect the mood of the piece. The composition is intended to bring the participant to the present and make them focus on their body/physical senses; bringing them first more viscerally into themselves and then the surrounding world once the experience ends.
   hyperlink: https://abunten.github.io/
-  img: assets/one.png  
+  img: assets/one.png
+  pos: '"-4.499 .6 -7.142"'
+  rotation: '"0 45 0"'  
 
 - author: Miranda Lao
   title: red string
   description: An examination of my relationship to math.
   hyperlink: https://mirandalao.com/2020/04/27/red-string.html
   img: assets/red.jpg
+  pos: '"3.4 .6 -8.166"'
+  rotation: '"0 45 0"' 
 
 - author: Athmika Senthilkumar
   title: Neoliberal Influences on the Founding of Olin College
   description: In this paper, I unpack the gravity of the founding trustees’ order that the college embody—as a condition for receiving endowments and grants—values rooted in free enterprise and capitalism. In doing so, I attempt to ponder critical questions about why Olin College was conceived and why certain features atypical on paper at the time in higher education, like the refusal to offer any path to faculty tenureship, were built into its founding. If one fails to examine the values of Olin’s founding, one risks perpetuating institutional practices and pedagogical beliefs that uncritically reproduce those values. By highlighting the values that the institution inherited through its founding, I hope to inspire explorations of what Olin College might look like under different value systems.
   hyperlink: https://docs.google.com/document/d/1Ofwp-ZXkIzeTZ3P_DIZvaf4xqgAzvNtKf90en_jS7p0/edit?usp=sharing
   img: assets/test-06.png
+  pos: '"7.096 .6 -19.121"'
+  rotation: '"0 45 0"' 
 
 - author: Tobias Shapinsky
   title: In a Different Light
   description: Ever wondered what the world would look like if you could see infrared? Well, in In a Different Light I modified a digital camera to find out. This set of images from Massachusetts, DC and New York show the world as you have never seen it before.
   hyperlink: https://photos.app.goo.gl/FbMv5etwwa7EmmbC8
   img: assets/infra.jpg
+  pos: '"4.017 .6 -19.671"'
+  rotation: '"0 45 0"' 
 
 - author: Annie Kroo
   title: Value Alignment in Change Initiatives
   description: In this project I have explored how value alignment interacts with change initiatives in an Olin context. This exploration draws on educational, cultural, and organizational change theory to understand areas of opportunity for the Olin community to improve our efficacy of innovation. This project is a quantitative and qualitative analysis based upon the Argosy Study conducted by Jon Stolk and Tess Edmonds comprised of 34 Olin faculty members responses.
   hyperlink: https://sites.google.com/view/valuealignmentinchange/home
   img: assets/value.png
+  pos: '"1.994 .6 -19.671"'
+  rotation: '"0 45 0"'
 
 - author: Gretchen Rice
   title: A Glimpse
   description: This collection looks into the stories of five Olin women seniors. The interviews were centered around the women's journeys through their education with a significant focus on gender. In this collection, I try to represent the women through photography and reflections about their interviews. I invite you to explore this collection and use their stories and an inspiration to reflect on your own experiences. 
   hyperlink: https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A0c756d4b-2a87-46dc-aec5-365e9e7c282c
   img: assets/glimpse.jpg
+  pos: '"-0.099 .6 -19.671"'
+  rotation: '"0 45 0"'
 
 - author: Henry Rachootin
   title: Mana Potion
   description: In the fiction of a story, magic is a real part of the world. Characters are able to study and perfect the use of magic through skill and dedication. In reality, we reserve the concept of magic for things that don't exist. We deride the magical as old fashioned and superstitious. This ontological decision forces us into a non-magical reality. We have systematically eliminated any trace of wonder at the power that does exist around us, creating a world were the natural processes that power our world are corrupted by the inclusion of science or math, no longer magical now that we can put numbers to them. These photos point out some of the ways that magic really does manifest, in the power of money, the power of certain liquids, and the power of levitation. The blue potion imbues its holder with the power of the dollar inside. The red potion can temporarily ease sickness by reducing fever and swelling. The deep green potion does the same, and also puts the drinker to sleep. The levitation is performed with a thin film of superconducting crystal, the mechanics of which are not well understood by physics.
   hyperlink: https://photos.app.goo.gl/8AoVHxmDy4dzrhVG9
   img: assets/potion.jpg
+  pos: '"-2.280 .6 -19.671"'
+  rotation: '"0 45 0"'
 
