--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -78,3 +78,37 @@
   pos: '"-2.280 .6 -19.671"'
   rotation: '"0 45 0"'
 
+- author: Onur Talu
+  title: Politics in the Middle East
+  description: International relations and foreign policy aren’t things we talk about often at Olin. The average American doesn’t live with the consequences of US foreign policy, however the majority of the world’s population does. The Vietnamese, the Chilean, the Turkish and the Greek felt them during the Cold War, just as the Syrians, Yemenis and Iraqis do today. I think it’s important to learn about international relations, and their direct ramifications on people’s lives. With this project, I hope to start a conversation about international relations, different countries’ foreign policies and their impact on the lives of regular people, especially for those that live in the Middle East.
+  hyperlink: https://docs.google.com/spreadsheets/d/12m2sVjJzIxykz8jB67eINTj8wqX5S9P8ZrJC-BU5x6I/edit#gid=1779029689
+  img: assets/politics.png
+  pos: '"-8.759 .6 -19.431"'
+  rotation: '"0 45 0"'
+
+- author: Kian Raissian
+  title: J.S. Bach, Unaccompanied Suites for Solo Cello, Suite V, I. Prelude
+  description: This project is a culmination of my studies in cello performance over the past year. While most of my year was spent working on Brahms' Sonata for Cello and Piano in F Major, school closure and the resulting inability to work with a pianist anymore forced me to choose a solo piece that I could learn in a month. 
+  img: assets/cello.png
+  pos: '"-8.759 .6 -16.092"'
+  rotation: '"0 45 0"'
+
+- author: Evan Lloyd New-Schmidt
+  title: Large Format Film Photography
+  description: Equipped with a camera from the 1940s, I've been taking photos of my experience at Olin pre- and post-Corona. One of the earliest photographic methods, large format photography has remained relevant due to the high-quality negatives and level of control that it offers photographers.  In addition to learning how to use the camera, I've also been developing the film by hand using a variety of methods. While you won't be able to see the physical prints or negatives, I've uploaded scans of the work.
+  hyperlink: https://evan.new-schmidt.com/things/large-format-photography
+  img: assets/large.jpg
+  pos: '"2.549 .6 -0.609"'
+  rotation: '"0 45 0"'
+
+- author: Jeremy Ryan
+  title: From Puente to Chopin - Musical Exploration and Composition
+  description: For this project, I explored two musical styles I had never composed in before - the nocturne, in the style of John Fields or Frédéric Chopin; and the Afro-Cuban son montuno. I researched the defining characteristics of these genres and produced two original compositions, each about three minutes in length.
+  hyperlink: https://docs.google.com/document/d/1ycspscj6o-Uqt8UpAwbHoekNj4UtXwdNzTJsrdQ6Lho/edit?usp=sharing
+  img: assets/piano.png
+  pos: '"2.261 .6 -12.507"'
+  rotation: '"0 45 0"'
+
+
+
+
