Fixing zoom link text

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,6 +13,7 @@
   img: assets/slc.jpg
   pos: '"-1.4 .6 -6.4"'
   rotation: '"0 45 0"'
+  zoom: https://olin.zoom.us/j/843306954
 
 - author: Kai Loewenstein
   title: Globsters - A Visual Novel
@@ -29,6 +30,7 @@
   img: assets/one.png
   pos: '"-4.499 .6 -7.142"'
   rotation: '"0 45 0"'  
+  zoom: https://olin.zoom.us/j/92456965213
 
 - author: Miranda Lao
   title: red string
@@ -53,6 +55,7 @@
   img: assets/infra.jpg
   pos: '"4.017 .6 -19.671"'
   rotation: '"0 45 0"' 
+  zoom: https://olin.zoom.us/j/92158126668?pwd=c3d4ZG0yMGFhSktpL3VRajV4MzNOUT09
 
 - author: Annie Kroo
   title: Value Alignment in Change Initiatives
@@ -69,6 +72,7 @@
   img: assets/glimpse.jpg
   pos: '"-0.099 .6 -19.671"'
   rotation: '"0 45 0"'
+  zoom: https://olin.zoom.us/j/98847738013 
 
 - author: Henry Rachootin
   title: Mana Potion
@@ -85,6 +89,7 @@
   img: assets/politics.png
   pos: '"-8.759 .6 -19.431"'
   rotation: '"0 45 0"'
+  zoom: https://olin.zoom.us/j/96357487302
 
 - author: Kian Raissian
   title: J.S. Bach, Unaccompanied Suites for Solo Cello, Suite V, I. Prelude
@@ -100,6 +105,7 @@
   img: assets/large.jpg
   pos: '"2.549 .6 -0.609"'
   rotation: '"0 45 0"'
+  zoom: https://olin.zoom.us/j/99076626043
 
 - author: Jeremy Ryan
   title: From Puente to Chopin - Musical Exploration and Composition
@@ -108,6 +114,7 @@
   img: assets/piano.png
   pos: '"2.261 .6 -12.507"'
   rotation: '"0 45 0"'
+  zoom: https://olin.zoom.us/j/5822832807
 
 
 
