Fixing project links and adding zoom links.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -85,7 +85,7 @@
 - author: Onur Talu
   title: Politics in the Middle East
   description: International relations and foreign policy aren’t things we talk about often at Olin. The average American doesn’t live with the consequences of US foreign policy, however the majority of the world’s population does. The Vietnamese, the Chilean, the Turkish and the Greek felt them during the Cold War, just as the Syrians, Yemenis and Iraqis do today. I think it’s important to learn about international relations, and their direct ramifications on people’s lives. With this project, I hope to start a conversation about international relations, different countries’ foreign policies and their impact on the lives of regular people, especially for those that live in the Middle East.
-  hyperlink: https://docs.google.com/spreadsheets/d/12m2sVjJzIxykz8jB67eINTj8wqX5S9P8ZrJC-BU5x6I/edit#gid=1779029689
+  hyperlink: https://drive.google.com/open?id=19Ixb0z9gOWvf_esdWAF2voxHqHntAgCw
   img: assets/politics.png
   pos: '"-8.759 .6 -19.431"'
   rotation: '"0 45 0"'
