Adding new pages and assets.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -44,7 +44,7 @@
   title: Neoliberal Influences on the Founding of Olin College
   description: In this paper, I unpack the gravity of the founding trustees’ order that the college embody—as a condition for receiving endowments and grants—values rooted in free enterprise and capitalism. In doing so, I attempt to ponder critical questions about why Olin College was conceived and why certain features atypical on paper at the time in higher education, like the refusal to offer any path to faculty tenureship, were built into its founding. If one fails to examine the values of Olin’s founding, one risks perpetuating institutional practices and pedagogical beliefs that uncritically reproduce those values. By highlighting the values that the institution inherited through its founding, I hope to inspire explorations of what Olin College might look like under different value systems.
   hyperlink: https://docs.google.com/document/d/1Ofwp-ZXkIzeTZ3P_DIZvaf4xqgAzvNtKf90en_jS7p0/edit?usp=sharing
-  img: assets/test-06.png
+  img: assets/olin.jpg
   pos: '"7.096 .6 -19.121"'
   rotation: '"0 45 0"' 
 
@@ -68,7 +68,7 @@
 - author: Gretchen Rice
   title: A Glimpse
   description: This collection looks into the stories of five Olin women seniors. The interviews were centered around the women's journeys through their education with a significant focus on gender. In this collection, I try to represent the women through photography and reflections about their interviews. I invite you to explore this collection and use their stories and an inspiration to reflect on your own experiences. 
-  hyperlink: https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A0c756d4b-2a87-46dc-aec5-365e9e7c282c
+  hyperlink: https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3Aa0f63d78-8975-4f9d-8fdc-cae35c3cf78f
   img: assets/glimpse.jpg
   pos: '"-0.099 .6 -19.671"'
   rotation: '"0 45 0"'
