Adding new zoom call.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -47,6 +47,7 @@
   img: assets/olin.jpg
   pos: '"7.096 .6 -19.121"'
   rotation: '"0 45 0"' 
+  zoom: https://olin.zoom.us/j/96252440299?pwd=WjluU2pBcitQMWVOSzFxbVl5UWw4dz09
 
 - author: Tobias Shapinsky
   title: In a Different Light
