Adding other zoom call

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -65,6 +65,7 @@
   img: assets/value.png
   pos: '"1.994 .6 -19.671"'
   rotation: '"0 45 0"'
+  zoom: https://olin.zoom.us/j/93155021491
 
 - author: Gretchen Rice
   title: A Glimpse
